# aeos-core

./: .gitignore  CURRENT_CAPABILITY_MATRIX.md  GAP_ANALYSIS.md  README.md  REPO_INVENTORY.md
aeos-core/: ESTADO_DEL_ARTE.md  README.md  pyproject.toml
aeos-core/agents/: agent_registry.yaml
aeos-core/agents/architect/: architect_agent.yaml
aeos-core/agents/auditor/: auditor_agent.yaml
aeos-core/agents/director/: director_agent.yaml
aeos-core/agents/implementer/: implementer_agent.yaml
aeos-core/agents/qa/: qa_agent.yaml
aeos-core/docs/: EXPERIMENTAL_LAB_CHARTER.md  EXPERIMENTAL_LAB_OPERATING_NOTES.md  OPERATIONAL_EXAMPLES.md  REVIEW_CADENCE.md
aeos-core/governance/: GOVERNANCE_SEVERITY_MODEL.md  PORTING_POLICY.md
aeos-core/memory/audits/: AUD-EXP-001.md  AUD-EXP-002.md  FORMAT_READABILITY_AUDIT_001.md
aeos-core/memory/experiments/: EXP-001.md  FORMAT_REMEDIATION_AUDIT.md  PORT-001.md  PORTABILITY_RISK_ASSESSMENT_001.md  PORTING_CANDIDATE_REVIEW_001.md
aeos-core/memory/handoffs/: HND-AUD-001.md  HND-EXP-001.md
aeos-core/memory/index/: README.md  traceability_index_template.md
aeos-core/protocols/: INCIDENT_PROTOCOL.md
aeos-core/scripts/: aeos_lint.py
aeos-core/templates/: audit_template.md  escalation_template.md  experiment_template.md  governance_health_report_template.md  incident_template.md  operational_report_template.md  porting_review_template.md
aeos-core/tests/: test_v02_operational_continuity.py
aeos-core/workflows/: feature_workflow.md  incident_workflow.md  research_workflow.md
cli/: README.md  pyproject.toml
(+200 files in other folders)
