[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "aeos-core"
version = "0.1.0"
description = "AI Engineering Operating System - Governance-first, repo-driven, human-governed"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "pyyaml>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
