[project]
name = "aeos-studio"
version = "0.1.0"
description = "CLI for AEOS — AI Engineering Operating System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
studio = "studio.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
